<resources>
    <string name="app_name">Project_page12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="tariqul_islam">Tariqul islam</string>
    <string name="recent_places">Recent Places</string>
    <string name="brolen_properties">Brolen Properties</string>
    <string name="hossain_market_dokka_1212">Hossain Market, Dokka 1212</string>
    <string name="monthly">/monthly</string>
    <string name="_425">$425</string>
    <string name="popular_places">Popular Places</string>
    <string name="_3_miles_from_wembley_middlesex">3 miles from wembley,middlesex</string>
    <string name="_1_750pcm_2_500pcm_at_least_11_bedroom">$1,750PCM,-$2,500PCM,At least 11 bedroom</string>

</resources>