<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/places_shape"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="134dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/image4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/brolen_properties"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/location_icon"
        app:layout_constraintTop_toBottomOf="@id/companyNameTv"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/locationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/hossain_market_dokka_1212"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/imageView5"
        app:layout_constraintStart_toStartOf="@id/imageView5"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/textviewAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_425"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/durationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/textviewAmt"
        app:layout_constraintStart_toStartOf="@id/textviewAmt"
        tools:layout_editor_absoluteX="220dp" />

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyNameTv"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_bookmark_add"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>